--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="menuWrapper">
       <a href="/" class="link active"><span>00</span> HOME</a>
       <a href="/destination/" class="link"><span>01</span> DESTNATION</a>
-      <a href="/" class="link"><span>02</span> CREW</a>
+      <a href="/crew/" class="link"><span>02</span> CREW</a>
       <a href="/" class="link"><span>03</span> TECHNOLOGY</a>
     </div>
   </header>
