--- a/destination/index.html
+++ b/destination/index.html
@@ -17,7 +17,7 @@
       <a href="/" class="link"><span>00</span> HOME</a>
       <a href="/destination/" class="link active"><span>01</span> DESTNATION</a>
       <a href="/crew/" class="link"><span>02</span> CREW</a>
-      <a href="/" class="link"><span>03</span> TECHNOLOGY</a>
+      <a href="/technology/" class="link"><span>03</span> TECHNOLOGY</a>
     </div>
   </header>
   <main>
