--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="/" class="link active"><span>00</span> HOME</a>
       <a href="/destination/" class="link"><span>01</span> DESTNATION</a>
       <a href="/crew/" class="link"><span>02</span> CREW</a>
-      <a href="/" class="link"><span>03</span> TECHNOLOGY</a>
+      <a href="/technology/" class="link"><span>03</span> TECHNOLOGY</a>
     </div>
   </header>
   <main>
@@ -26,9 +26,12 @@
       <div class="textTitle">SPACE</div>
       <div class="explain">Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</div>
     </div>
-    <div class="mainBox">
-      <div class="boxText">EXPLORE</div>
-    </div>
+    <a href="/destination/index.html" class="boxWrapper">
+      <div class="mainBox">
+        <div class="boxText">EXPLORE</div>
+      </div>
+    </a>
+
   </main>
 
   <script type="module" src="/main.js"></script>
