--- a/index.html
+++ b/index.html
@@ -11,27 +11,41 @@
 <body>
   <img src="/img/Bitmap.jpg" alt="" class="background">
   <header>
-    <img src="/img/Logo.svg" alt="" class="logo">
-    <div class="line"></div>
+    <div class="logo">
+      <img src="/img/Logo.svg" alt="">
+    </div>
     <div class="menuWrapper">
+      <div class="line"></div>
       <a href="/" class="link active"><span>00</span> HOME</a>
       <a href="/destination/" class="link"><span>01</span> DESTNATION</a>
       <a href="/crew/" class="link"><span>02</span> CREW</a>
       <a href="/technology/" class="link"><span>03</span> TECHNOLOGY</a>
     </div>
-  </header>
-  <main>
-    <div class="textWrapper">
-      <div class="text">SO, YOU WANT TO TRAVEL TO</div>
-      <div class="textTitle">SPACE</div>
-      <div class="explain">Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</div>
+    <div class="menuButton">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-    <a href="/destination/index.html" class="boxWrapper">
-      <div class="mainBox">
-        <div class="boxText">EXPLORE</div>
+  </header>
+  <div class="mobilMenu">
+    <a href="/" class="link active"><span>00</span> HOME</a>
+    <a href="/destination/" class="link"><span>01</span> DESTNATION</a>
+    <a href="/crew/" class="link"><span>02</span> CREW</a>
+    <a href="/technology/" class="link"><span>03</span> TECHNOLOGY</a>
+  </div>
+  <main class="homePage">
+    <div class="wrapper">
+      <div class="textWrapper">
+        <div class="text">SO, YOU WANT TO TRAVEL TO</div>
+        <div class="textTitle">SPACE</div>
+        <div class="explain">Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</div>
       </div>
-    </a>
-
+      <a href="/destination/" class="boxWrapper">
+        <div class="mainBox">
+          <div class="boxText">EXPLORE</div>
+        </div>
+      </a>
+    </div>
   </main>
 
   <script type="module" src="/main.js"></script>
