--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <main class="homePage">
     <div class="wrapper">
       <div class="textWrapper">
-        <div class="text">SO, YOU WANT TO TRAVEL TO</div>
+        <div class="name">SO, YOU WANT TO TRAVEL TO</div>
         <div class="textTitle">SPACE</div>
-        <div class="explain">Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</div>
+        <div class="text">Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</div>
       </div>
       <a href="/destination/" class="boxWrapper">
         <div class="mainBox">
