--- a/crew/index.html
+++ b/crew/index.html
@@ -11,32 +11,54 @@
 <body>
   <img src="/assets/crew/background-crew-desktop.jpg" alt="" class="background">
   <header>
-    <img src="/img/Logo.svg" alt="" class="logo">
+    <div class="logo">
+      <img src="/img/Logo.svg" alt="">
+    </div>
     <div class="menuWrapper">
       <div class="line"></div>
-      <a href="/" class="link"><span>00</span> HOME</a>
-      <a href="/destination/" class="link"><span>01</span> DESTNATION</a>
+      <a href="/" class="link "><span>00</span> HOME</a>
+      <a href="/destination/" class="link "><span>01</span> DESTINATION</a>
       <a href="/crew/" class="link active"><span>02</span> CREW</a>
       <a href="/technology/" class="link"><span>03</span> TECHNOLOGY</a>
     </div>
+    <div class="menuButton">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
+  <div class="mobilMenu">
+    <a href="/" class="link "><span>00</span> HOME</a>
+    <a href="/destination/" class="link"><span>01</span> DESTNATION</a>
+    <a href="/crew/" class="link active"><span>02</span> CREW</a>
+    <a href="/technology/" class="link"><span>03</span> TECHNOLOGY</a>
+  </div>
   <main>
-    <div class="wrapper">
-      <div class="crew">
+    <div class="mainText mainText2"><span>02</span> &nbsp; MEET YOUR CREW</div>
+    <div class="wrapper crew">
+      <div style="width:100%;">
         <div class="mainText"><span>02</span> &nbsp; MEET YOUR CREW</div>
         <div class="flex">
-          <div class="title">COMMANDER</div>
-          <div class="name">DOUGLAS HURLEY</div>
-          <div class="text">Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former NASA astronaut. He launched into space for the third time as commander of Crew Dragon Demo-2.</div>
+          <div>
+            <div class="title">COMMANDER</div>
+            <div class="name">DOUGLAS HURLEY</div>
+            <div class="text">Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former NASA astronaut. He launched into space for the third time as commander of Crew Dragon Demo-2.</div>
+          </div>
+          <div class="dots">
+            <div data-id="1" class="dot active"></div>
+            <div data-id="2" class="dot"></div>
+            <div data-id="3" class="dot"></div>
+            <div data-id="4" class="dot"></div>
+          </div>
         </div>
-        <div class="dots">
-          <div data-id="1" class="dot active"></div>
-          <div data-id="2" class="dot"></div>
-          <div data-id="3" class="dot"></div>
-          <div data-id="4" class="dot"></div>
+
+      </div>
+      <div class="crewImg">
+        <div>
+          <img src="/assets/crew/image-douglas-hurley.png" alt="">
         </div>
       </div>
-      <div class="crewImg"><img src="/assets/crew/image-douglas-hurley.png" alt=""></div>
+
     </div>
 
   </main>
