--- a/destination/index.html
+++ b/destination/index.html
@@ -28,8 +28,8 @@
     </div>
   </header>
   <div class="mobilMenu">
-    <a href="/" class="link active"><span>00</span> HOME</a>
-    <a href="/destination/" class="link"><span>01</span> DESTNATION</a>
+    <a href="/" class="link "><span>00</span> HOME</a>
+    <a href="/destination/" class="link active"><span>01</span> DESTINATION</a>
     <a href="/crew/" class="link"><span>02</span> CREW</a>
     <a href="/technology/" class="link"><span>03</span> TECHNOLOGY</a>
   </div>
