--- a/technology/index.html
+++ b/technology/index.html
@@ -11,34 +11,56 @@
 <body>
   <img src="/assets/technology/background-technology-desktop.jpg" alt="" class="background">
   <header>
-    <img src="/img/Logo.svg" alt="" class="logo">
+    <div class="logo">
+      <img src="/img/Logo.svg" alt="">
+    </div>
     <div class="menuWrapper">
       <div class="line"></div>
-      <a href="/" class="link"><span>00</span> HOME</a>
-      <a href="/destination/" class="link "><span>01</span> DESTNATION</a>
-      <a href="/crew/" class="link"><span>02</span> CREW</a>
+      <a href="/" class="link "><span>00</span> HOME</a>
+      <a href="/destination/" class="link "><span>01</span> DESTINATION</a>
+      <a href="/crew/" class="link "><span>02</span> CREW</a>
       <a href="/technology/" class="link active"><span>03</span> TECHNOLOGY</a>
     </div>
+    <div class="menuButton">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
+  <div class="mobilMenu">
+    <a href="/" class="link "><span>00</span> HOME</a>
+    <a href="/destination/" class="link"><span>01</span> DESTNATION</a>
+    <a href="/crew/" class="link "><span>02</span> CREW</a>
+    <a href="/technology/" class="link active"><span>03</span> TECHNOLOGY</a>
+  </div>
   <main>
-    <div class="wrapper" style="position: relative;">
-      <div class="mainText"><span>03</span> &nbsp; SPACE LAUNCH 101</div>
-      <div class="technology">
-        <div class="circles">
-          <div class="circle">1</div>
-          <div class="circle">2</div>
-          <div class="circle">3</div>
-        </div>
-        <div class="content">
-          <div class="subTitle">THE TERMINOLOGY…</div>
-          <div class="title">LAUNCH VEHICLE</div>
-          <div class="text">A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload from Earth's surface to space, usually to Earth orbit or beyond. Our WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, it's quite an awe-inspiring sight on the launch pad!</div>
-        </div>
-        <div class="imgWrapper">
-          <img src="/assets/technology/image-launch-vehicle-portrait.jpg" alt="">
+
+
+
+    <div class="mainText mainText3"><span>03</span> &nbsp; SPACE LAUNCH 101</div>
+    <div class="wrapper technology2" style="position: relative;">
+      <div>
+        <div class="technology">
+          <div class="circles">
+            <div class="circle">1</div>
+            <div class="circle">2</div>
+            <div class="circle">3</div>
+          </div>
+          <div class="content">
+            <div class="subTitle">THE TERMINOLOGY…</div>
+            <div class="title">LAUNCH VEHICLE</div>
+            <div class="text">A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload from Earth's surface to space, usually to Earth orbit or beyond. Our WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, it's quite an awe-inspiring sight on the launch pad!</div>
+          </div>
         </div>
       </div>
+      <div class="imgWrapper">
+        <img src="/assets/technology/image-launch-vehicle-portrait.jpg" alt="">
+      </div>
+
+
+
     </div>
+
   </main>
   <script type="module" src="../main.js"></script>
 
