Minor fixes and optimized for deploy

--- a/crew/index.html
+++ b/crew/index.html
@@ -11,9 +11,9 @@
 <body>
   <img src="/assets/crew/background-crew-desktop.jpg" alt="" class="background">
   <header>
-    <div class="logo">
+    <a href="/" class="logo">
       <img src="/img/Logo.svg" alt="">
-    </div>
+    </a>
     <div class="menuWrapper">
       <div class="line"></div>
       <a href="/" class="link "><span>00</span> HOME</a>
@@ -29,7 +29,7 @@
   </header>
   <div class="mobilMenu">
     <a href="/" class="link "><span>00</span> HOME</a>
-    <a href="/destination/" class="link"><span>01</span> DESTNATION</a>
+    <a href="/destination/" class="link"><span>01</span> DESTINATION</a>
     <a href="/crew/" class="link active"><span>02</span> CREW</a>
     <a href="/technology/" class="link"><span>03</span> TECHNOLOGY</a>
   </div>
