--- a/destination/index.html
+++ b/destination/index.html
@@ -11,9 +11,9 @@
 <body>
   <img src="/assets/destination/background-destination-desktop.jpg" alt="" class="background">
   <header>
-    <div class="logo">
+    <a href="/" class="logo">
       <img src="/img/Logo.svg" alt="">
-    </div>
+    </a>
     <div class="menuWrapper">
       <div class="line"></div>
       <a href="/" class="link "><span>00</span> HOME</a>
