--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="icon" type="image/png" href="/assets/favicon-32x32.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>Space Tourism</title>
 </head>
 
 <body>
   <img src="/img/Bitmap.jpg" alt="" class="background">
   <header>
-    <div class="logo">
+    <a href="/" class="logo">
       <img src="/img/Logo.svg" alt="">
-    </div>
+    </a>
     <div class="menuWrapper">
       <div class="line"></div>
       <a href="/" class="link active"><span>00</span> HOME</a>
-      <a href="/destination/" class="link"><span>01</span> DESTNATION</a>
+      <a href="/destination/" class="link"><span>01</span> DESTINATION</a>
       <a href="/crew/" class="link"><span>02</span> CREW</a>
       <a href="/technology/" class="link"><span>03</span> TECHNOLOGY</a>
     </div>
