--- a/technology/index.html
+++ b/technology/index.html
@@ -11,9 +11,9 @@
 <body>
   <img src="/assets/technology/background-technology-desktop.jpg" alt="" class="background">
   <header>
-    <div class="logo">
+    <a href="/" class="logo">
       <img src="/img/Logo.svg" alt="">
-    </div>
+    </a>
     <div class="menuWrapper">
       <div class="line"></div>
       <a href="/" class="link "><span>00</span> HOME</a>
@@ -29,20 +29,17 @@
   </header>
   <div class="mobilMenu">
     <a href="/" class="link "><span>00</span> HOME</a>
-    <a href="/destination/" class="link"><span>01</span> DESTNATION</a>
+    <a href="/destination/" class="link"><span>01</span> DESTINATION</a>
     <a href="/crew/" class="link "><span>02</span> CREW</a>
     <a href="/technology/" class="link active"><span>03</span> TECHNOLOGY</a>
   </div>
   <main>
-
-
-
     <div class="mainText mainText3"><span>03</span> &nbsp; SPACE LAUNCH 101</div>
     <div class="wrapper technology2" style="position: relative;">
       <div>
         <div class="technology">
           <div class="circles">
-            <div class="circle">1</div>
+            <div class="circle active">1</div>
             <div class="circle">2</div>
             <div class="circle">3</div>
           </div>
@@ -56,14 +53,10 @@
       <div class="imgWrapper">
         <img src="/assets/technology/image-launch-vehicle-portrait.jpg" alt="">
       </div>
-
-
-
     </div>
-
   </main>
-  <script type="module" src="../main.js"></script>
 
+  <script type="module" src="../main.js"></script>
 </body>
 
 </html>
